objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Inv_AP_Visita_OK__c</fullName>
        <description>Para Inversiones AP, el ejecutivo debe indicar como salio la visita, luego de haber aprobado.</description>
        <label>Visita OK?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inv_ClienteVerificado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inversión BIA</description>
        <label>Cliente verificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_GPI_habilitado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GPI habilitado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_Ingreso_de_activos_listo__c</fullName>
        <label>Formulario de ingreso de activos:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirma recepción formulario</fullName>
                    <label>Recepción conforme</label>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>Reparos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inv_Linea_de_sobregiro_abierta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Línea de crédito BIA abierta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_PropuestaCreada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Propuesta Creada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_Propuesta__c</fullName>
        <label>Propuesta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crear propuesta</fullName>
                </value>
                <value>
                    <fullName>Propuesta creada</fullName>
                </value>
                <value>
                    <fullName>Propuesta entregada</fullName>
                </value>
                <value>
                    <fullName>Requiere propuesta</fullName>
                    <isActive>false</isActive>
                    <label>Requiere propuesta</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inv_RequiresCreditManagement__c</fullName>
        <label>Requires credit management?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inv_Welcome_pack_disponible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>El de operaciones marca que el welcome pack esta disponible para retiro.</description>
        <label>Welcome pack disponible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_Welcome_pack_entregado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome pack entregado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jefe_Plataforma_Agente_Sucursal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jefe Plataforma / Agente Sucursal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jefe_de_Grupo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jefe de Grupo</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KYC_Aprobado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KYC_Ingresado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC Ingresado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_nea_vigente__c</fullName>
        <label>MAC vigente para cursar esta oportunidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAC_gestionado_y_creado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAC gestionado y creado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marque_si_ser_producto_BIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Producto BIA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MeAsignaronOportunidad__c</fullName>
        <formula>IF( OwnerId = $User.Id , &quot;VERDADERO&quot;, &quot;FALSO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MeAsignaronOportunidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Peso Chileno</fullName>
                    <default>true</default>
                    <label>Peso Chileno</label>
                </value>
                <value>
                    <fullName>UF</fullName>
                </value>
                <value>
                    <fullName>Dólares</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Peso Argentino</fullName>
                </value>
                <value>
                    <fullName>Afgani</fullName>
                </value>
                <value>
                    <fullName>Ariari</fullName>
                </value>
                <value>
                    <fullName>Balboa Panameño</fullName>
                </value>
                <value>
                    <fullName>Bat</fullName>
                </value>
                <value>
                    <fullName>Bir</fullName>
                </value>
                <value>
                    <fullName>Bolívar Fuerte</fullName>
                </value>
                <value>
                    <fullName>Boliviano</fullName>
                </value>
                <value>
                    <fullName>Cedi De Gana</fullName>
                </value>
                <value>
                    <fullName>Chelín Keniano</fullName>
                </value>
                <value>
                    <fullName>Chelín Somalí</fullName>
                </value>
                <value>
                    <fullName>Chelín Tanzaniano</fullName>
                </value>
                <value>
                    <fullName>Chelín Ugandés</fullName>
                </value>
                <value>
                    <fullName>Colón Costarricense</fullName>
                </value>
                <value>
                    <fullName>Colón Salvadoreño</fullName>
                </value>
                <value>
                    <fullName>Córdoba Nicaragüense</fullName>
                </value>
                <value>
                    <fullName>Corona Checa</fullName>
                </value>
                <value>
                    <fullName>Corona Danesa</fullName>
                </value>
                <value>
                    <fullName>Corona Islandesa</fullName>
                </value>
                <value>
                    <fullName>Corona Noruega</fullName>
                </value>
                <value>
                    <fullName>Corona Sueca</fullName>
                </value>
                <value>
                    <fullName>Dalasi Gambiano</fullName>
                </value>
                <value>
                    <fullName>Denar</fullName>
                </value>
                <value>
                    <fullName>Dinar</fullName>
                </value>
                <value>
                    <fullName>Dinar De Baréin</fullName>
                </value>
                <value>
                    <fullName>Dinar Irakí</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monto_MAC_creado__c</fullName>
        <label>Monto MAC creado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <label>Monto (MM$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monto_leasing__c</fullName>
        <label>Monto leasing (MM$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motivo_no_cumple_condiciones__c</fullName>
        <label>Motivo no cumple condiciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Motivo_rechazo__c</fullName>
        <label>Motivo rechazo comité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No se ajusta a las condiciones de comportamiento</fullName>
                </value>
                <value>
                    <fullName>Cliente no interesado</fullName>
                </value>
                <value>
                    <fullName>Cliente no aceptó la propuesta</fullName>
                </value>
                <value>
                    <fullName>El cliente no está interesado en el producto</fullName>
                </value>
                <value>
                    <fullName>Rechazado en Comité</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivos_cierre_no_exitoso__c</fullName>
        <label>Motivos cierre no exitoso</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>N_mero_de_operaci_n__c</fullName>
        <label>Número de operación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>N_mero_del_cr_dito__c</fullName>
        <label>Número del crédito</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_Productos__c</fullName>
        <label>Número de Productos</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operaciones__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operaciones</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Operaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oportunidad_girada__c</fullName>
        <label>Oportunidad girada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origen_referido__c</fullName>
        <label>Origen referido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inteligencia de Negocio </fullName>
                </value>
                <value>
                    <fullName>Banca Privada </fullName>
                </value>
                <value>
                    <fullName>Corporaciones </fullName>
                </value>
                <value>
                    <fullName>Empresas </fullName>
                </value>
                <value>
                    <fullName>Sucursales </fullName>
                </value>
                <value>
                    <fullName>Banca Persona </fullName>
                </value>
                <value>
                    <fullName>BICE Inversiones </fullName>
                </value>
                <value>
                    <fullName>Ejecutivos AP </fullName>
                </value>
                <value>
                    <fullName>Referidos Clientes </fullName>
                </value>
                <value>
                    <fullName>Asesor (Asesor, contador, Family Office u otro tercero) </fullName>
                </value>
                <value>
                    <fullName>Licitaciones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otro_motivo__c</fullName>
        <label>Descripción otro motivo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otro_motivo_rechazo__c</fullName>
        <label>Otro motivo rechazo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pasar_a_calificaci_n__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pasar a otorgamiento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo (meses)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentar_Soluci_n_financiera__c</fullName>
        <defaultValue>false</defaultValue>
        <description>W-000016</description>
        <label>Presentar Solución financiera</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prima_seg_n_frecuencia_de_pagos_UF__c</fullName>
        <label>Prima según frecuencia de pagos (UF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Producto__c</fullName>
        <label>Producto</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productos_bancarios__c</fullName>
        <label>Productos bancarios</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash management</fullName>
                </value>
                <value>
                    <fullName>COMEX</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>Cursar inversiones</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Mesa de dinero</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profin_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Comercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requiere_enrolamiento__c</fullName>
        <description>Campo para distinguir si el posible cliente requiere enrolamiento.</description>
        <label>¿Requiere enrolamiento?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requiere_tarifa_especial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requiere tarifa especial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resultado_Comite__c</fullName>
        <label>Resultado Comité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En_proceso_de_comite</fullName>
                    <color>#F3D904</color>
                    <label>En proceso de comité</label>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                    <color>#33CC00</color>
                    <label>Aprobado</label>
                </value>
                <value>
                    <fullName>Condicionado</fullName>
                    <color>#CC9933</color>
                    <label>Condicionado</label>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                    <color>#CC0000</color>
                    <label>Rechazado</label>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                    <color>#6633FF</color>
                    <label>No aplica</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_cierre__c</fullName>
        <description>El ejecutivo especialista debe seleccionar un valor, para que el ejecutivo comercial pueda conocer el resultado.</description>
        <label>Resultado cierre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exitoso</fullName>
                </value>
                <value>
                    <fullName>No exitoso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_del_contacto__c</fullName>
        <label>Resultado del contacto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contactado</fullName>
                </value>
                <value>
                    <fullName>No contactado</fullName>
                </value>
                <value>
                    <fullName>No responde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_report_recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informe de riesgo recibido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segmento_referido__c</fullName>
        <label>Segmento referido</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No es Cliente</fullName>
                </value>
                <value>
                    <fullName>Cliente Banco </fullName>
                </value>
                <value>
                    <fullName>Cliente Inversiones</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitude_de_Producto_y_Servicios__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solicitude de Producto y Servicios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spread__c</fullName>
        <label>Spread (% anual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subetapa__c</fullName>
        <label>Subetapa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crear equipo</fullName>
                </value>
                <value>
                    <fullName>Presentar propuesta</fullName>
                </value>
                <value>
                    <fullName>Propuesta presentada</fullName>
                </value>
                <value>
                    <fullName>Enrolar</fullName>
                </value>
                <value>
                    <fullName>Crear KYC</fullName>
                </value>
                <value>
                    <fullName>Comité de crédito</fullName>
                </value>
                <value>
                    <fullName>Apertura productos</fullName>
                </value>
                <value>
                    <fullName>Welcome pack disponible</fullName>
                </value>
                <value>
                    <fullName>Welcome pack entregado</fullName>
                </value>
                <value>
                    <fullName>Productos activados</fullName>
                </value>
                <value>
                    <fullName>Gestionar crédito</fullName>
                </value>
                <value>
                    <fullName>Gestionar inversion</fullName>
                    <label>Gestionar inversión</label>
                </value>
                <value>
                    <fullName>Inversión realizada</fullName>
                </value>
                <value>
                    <fullName>Verificar cliente banco</fullName>
                </value>
                <value>
                    <fullName>Crear propuesta</fullName>
                </value>
                <value>
                    <fullName>Gestionar prenda y GPI</fullName>
                </value>
                <value>
                    <fullName>Aperturar línea de crédito BIA</fullName>
                </value>
                <value>
                    <fullName>Contacto cliente</fullName>
                </value>
                <value>
                    <fullName>Aprobación cliente</fullName>
                </value>
                <value>
                    <fullName>Gestión pendiente</fullName>
                </value>
                <value>
                    <fullName>Validación cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subproducto__c</fullName>
        <label>Tipo de producto</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sucursal__c</fullName>
        <label>Sucursal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tareas_de_Otorgamiento_completadas__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Debe completar las tareas para poder avanzar a la siguiente etapa.</inlineHelpText>
        <label>Tareas de &quot;Otorgamiento&quot; completadas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_BIA__c</fullName>
        <label>Tipo de cuenta BIA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nacional (CLP)</fullName>
                </value>
                <value>
                    <fullName>Internacional (USD)</fullName>
                </value>
                <value>
                    <fullName>Ambos</fullName>
                </value>
                <value>
                    <fullName>Internacional</fullName>
                    <isActive>false</isActive>
                    <label>Internacional</label>
                </value>
                <value>
                    <fullName>Nacional</fullName>
                    <isActive>false</isActive>
                    <label>Nacional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_pago__c</fullName>
        <label>Tipo de pago</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ventas_seg_n_IVA__c</fullName>
        <label>Ventas según IVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actividades_comite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Debe completar las actividades antes de pasar a la etapa de &quot;Otorgamiento&quot;</inlineHelpText>
        <label>Actividades comité MAC completadas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alerta_al_subgerente_agente_comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subgerente/agente comercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Op_Us_Subgerente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>completar_y_firmar_Formulario_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completar y firmar Formulario EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>motivo_rechazo_opp__c</fullName>
        <label>Motivo rechazo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comportamiento comercial</fullName>
                </value>
                <value>
                    <fullName>No se pudo contactar</fullName>
                </value>
                <value>
                    <fullName>Cifra</fullName>
                </value>
                <value>
                    <fullName>Riesgo</fullName>
                </value>
                <value>
                    <fullName>Cliente no quiso/sin interés</fullName>
                </value>
                <value>
                    <fullName>No es perfil banco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
</CustomObject>